@@ -1,4 +1,5 @@
 23 Aug 2018
+fix: delete user inactive.php
 fix: display freeleech.php block
 fix: set/unset bonus edit_moods.php
 fix: check if var is empty before using it torrenttable_functions.php
